# COM6104

./: .gitignore  BUG_FIXES.md  GSTACK_INVESTIGATION_SUMMARY.md  QUICK_FIX_REFERENCE.md  README.md  TODOS.md  verify_fixes.py
agent/app/: layout.tsx  page.tsx
agent/app/dashboard/: layout.tsx  page.tsx
agent/app/dashboard/applications/: page.tsx
agent/app/dashboard/customize/: page.tsx
agent/app/dashboard/interview/: page.tsx
agent/app/dashboard/jobs/: page.tsx
agent/app/dashboard/resume/: page.tsx
agent/lib/: resume-store.ts
backend/: .env.example  .gitignore  README.md  agent.py  confirm_store.py  db.py  llm_client.py  main.py  mcp_server.py  pyproject.toml  workflow.py  workflow_store.py
backend/data/: cached_jobs.json
backend/tests/: conftest.py  test_agent.py  test_db.py  test_email_sender.py  test_interview_prep.py  test_job_search.py  test_linkedin_apply.py  test_main.py  test_resume_customizer.py  test_workflow.py
backend/tools/: __init__.py  browser_harness.py  email_sender.py  interview_prep.py  job_search.py  linkedin_apply.py  resume_customizer.py  web_search.py
