[project]
name = "job-hunt-agent-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "zhipuai>=2.1",
    "browser-use>=0.1.40",
    "langchain-openai>=0.2",      # browser-use 通过智谱 OpenAI 兼容接口驱动
    "pdfplumber>=0.11",
    "python-multipart>=0.0.9",
    "jinja2>=3.1",
    "requests>=2.32",
    "mistune>=3.0",
    "weasyprint>=62",
    "mcp>=1.0",
    "playwright>=1.40",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
